# blink-rust

./: Cargo.toml  Embed.toml  README.md  rust-toolchain.toml
.cargo/: config
exercice1/: Cargo.toml
exercice1/src/: main.rs
exercice2/: Cargo.toml
exercice2/src/: main.rs
exercice3/: Cargo.toml
exercice3/src/: main.rs
exercice4/: Cargo.toml
exercice5/: Cargo.toml
exercice5/src/: main.rs
exercice6/: Cargo.toml
exercice6/src/: main.rs
