[workspace.package]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/CraftLR/workshop-rust-blink"
license = "MIT"

[workspace]
resolver = "2"
members = [
    "exercice1",
    "exercice2",
    "exercice3",
    "exercice4",
    "exercice5",
]

[workspace.dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"

stm32l4xx-hal = { version = "0.7", features = ["stm32l475", "rt"] }

defmt = "0.3"
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }
