[workspace.package]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/CraftLR/workshop-rust-blink"
license = "MIT"

[workspace]
resolver = "2"
members = [
    "exercice1",
    "exercice2",
    "exercice3",
    "exercice4",
    "exercice5",
    "exercice6",
    "exercice7",
]
default-members = [
    "exercice1",
]

[patch.crates-io]
embassy-stm32        = { git = "https://github.com/embassy-rs/embassy"}
embassy-sync         = { git = "https://github.com/embassy-rs/embassy"}
embassy-executor     = { git = "https://github.com/embassy-rs/embassy"}
embassy-time         = { git = "https://github.com/embassy-rs/embassy"}
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy"}

[workspace.dependencies]
embassy-stm32        = { version = "0.1.0", features = ["nightly", "unstable-traits","defmt","stm32l475rg", "memory-x", "time-driver-any", "exti"] }
embassy-sync         = { version = "0.3.0" }
embassy-executor     = { version = "0.3.0", features = ["nightly", "defmt", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time         = { version = "0.1.0", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = { version = "0.1.0", features = ["nightly"] }

defmt                = { version = "0.3" }
defmt-rtt            = { version = "0.4" }

cortex-m             = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt          = { version = "0.7.0" }

panic-probe          = { version = "0.3", features = ["print-defmt"] }

stm32l4xx-hal        = { version = "0.7", features = ["stm32l475", "rt"] }
