[package]
name = "exercice3"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m.workspace=true
cortex-m-rt.workspace=true
stm32l4xx-hal.workspace=true
defmt.workspace=true
defmt-rtt.workspace=true
panic-probe.workspace=true