[package]
name = "exercice5"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
embassy-stm32 = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits","defmt","stm32l475rg", "memory-x", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.3", git = "https://github.com/embassy-rs/embassy"}
embassy-executor = { version = "0.3", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.1", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }


defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

panic-probe = { version = "0.3", features = ["print-defmt"] }
