[package]
name = "exercice6"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
embassy-stm32.workspace= true
embassy-sync.workspace= true
embassy-executor.workspace= true
embassy-time.workspace= true
embassy-embedded-hal.workspace= true
defmt.workspace= true
defmt-rtt.workspace= true

cortex-m.workspace= true
cortex-m-rt.workspace= true

panic-probe.workspace= true